--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <!-- Load Material Icons from Google CDN so <mat-icon> ligatures render correctly in the browser.
+    Note: if you plan to build/deploy in an environment without internet access, consider
+    self-hosting the Material Icons font instead (see README or ask me to set that up). -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="mat-typography">
